infra/k8s/(deprecated) posts-pod.yaml
# kubectl apply -f posts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: microservice/posts:0.0.1
