infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-depl
spec: 
  replicas: 1 # number o pods to create form some docker image
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: guerrerocristian/client:development
---
apiVersion: v1
kind: Service
metadata: 
  name: client-clusterip-srv
spec:
  selector: 
    app: client
  type: ClusterIP # optional (defalul value is ClusterIP)
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
