infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: moderation-depl
spec: 
  replicas: 1 # number o pods to create form some docker image
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: guerrerocristian/moderation:development
---
apiVersion: v1
kind: Service
metadata: 
  name: moderation-clusterip-srv
spec:
  selector: 
    app: moderation
  type: ClusterIP # optional (defalul value is ClusterIP)
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
